--- a/templates/ErrorMessage.html
+++ b/templates/ErrorMessage.html
@@ -15,6 +15,7 @@ div.bright-error-panel-wrapper {
 }
 div.bright-error-panel div.bright-error-section {
   padding: 4px;
+  word-wrap: break-word;
 }
 div.bright-error-panel div.error {
   font-size: 14pt;
