--- a/tools/template-web/backend/templates/head.html
+++ b/tools/template-web/backend/templates/head.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>[[config.page-title]]</title>
-  <meta name="description" content="[[config.page-description]]">
-  <meta name="author" content="[[config.page-author]]">
+  <title>[[br.config.page-title]]</title>
+  <meta name="description" content="[[br.config.page-description]]">
+  <meta name="author" content="[[br.config.page-author]]">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <link href="{br}3rdparty/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{br}3rdparty/fontawesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
-  <link href="{br}3rdparty/gritter/css/jquery.gritter.css" rel="stylesheet">
-  <link href="{br}3rdparty/jquery-ui/1.11.4/jquery-ui.theme.min.css" rel="stylesheet">
-  <link href="{br}css/bright-bootstrap3.css" rel="stylesheet">
-  <link href="{/}css/styles.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/fontawesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/gritter/css/jquery.gritter.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/jquery-ui/1.11.4/jquery-ui.theme.min.css" rel="stylesheet">
+  <link href="[[br]]css/bright-bootstrap3.css" rel="stylesheet">
+  <link href="[[/]]css/styles.css" rel="stylesheet">
 </head>
