--- a/tools/template-web/backend/templates/login.html
+++ b/tools/template-web/backend/templates/login.html
@@ -40,7 +40,7 @@
           </div>
           <div class="modal-footer">
             <button data-loading-text="sending info..." class="action-login btn btn-primary">Login</button>&nbsp;
-            <a href="{/}" class="btn btn-default">Cancel</a>
+            <a href="[[/]]" class="btn btn-default">Cancel</a>
           </div>
         </div>
       </div>
