--- a/tools/template-web/backend/templates/navigation.html
+++ b/tools/template-web/backend/templates/navigation.html
@@ -7,19 +7,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{/}../" target="_blank">[[config.site-name]]</a>
+      <a class="navbar-brand" href="[[/]]../" target="_blank">[[br.config.site-name]]</a>
     </div>
     <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
       <li class="nav-item ajax-in-progress invisible">
-        <img width="24" border="0" src="{br}images/progress-small.gif" style="padding-top:5px;" />
+        <img width="24" border="0" src="[[br]]images/progress-small.gif" style="padding-top:5px;" />
       </li>
 {$}
-      <li class="nav-item" rel="users"><a href="{/}users">Users</a></li>
+      <li class="nav-item" rel="users"><a href="[[/]]users">Users</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="divider-vertical"></li>
-      <li><a><strong>Logged as [[login.name]]</strong></a></li>
+      <li><a><strong>Logged as [[br.login.name]]</strong></a></li>
       <li><a class="action-logout" href="javascript:;">Logout</a></li>
 {$}
     </ul>
