--- a/tools/template-web/templates/footer.html
+++ b/tools/template-web/templates/footer.html
@@ -1,12 +1,12 @@
   <!--[if lt IE 8]>
-    <script src="{br}3rdparty/json2/json2.js"></script>
+    <script src="[[br]]3rdparty/json2/json2.js"></script>
   <![endif]-->
 
-  <script src="{br}3rdparty/jquery/jquery-1.8.2.min.js"></script>
-  <script src="{br}3rdparty/bootstrap/2.3.2/js/bootstrap.min.js"></script>
-  <script src="{br}3rdparty/handlebars/js/4.0.11/handlebars.min.js"></script>
-  <script src="{br}3rdparty/gritter/js/jquery.gritter.min.js"></script>
-  <script src="{br}js/bright.min.js"></script>
+  <script src="[[br]]3rdparty/jquery/jquery-1.8.2.min.js"></script>
+  <script src="[[br]]3rdparty/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+  <script src="[[br]]3rdparty/handlebars/js/4.0.11/handlebars.min.js"></script>
+  <script src="[[br]]3rdparty/gritter/js/jquery.gritter.min.js"></script>
+  <script src="[[br]]js/bright.min.js"></script>
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
