--- a/tools/template-web/backend/templates/navigation.html
+++ b/tools/template-web/backend/templates/navigation.html
@@ -14,14 +14,14 @@
       <li class="nav-item ajax-in-progress invisible">
         <img width="24" border="0" src="[[br]]images/progress-small.gif" style="padding-top:5px;" />
       </li>
-{$}
+[[#br.authorized]]
       <li class="nav-item" rel="users"><a href="[[/]]users">Users</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="divider-vertical"></li>
       <li><a><strong>Logged as [[br.login.name]]</strong></a></li>
       <li><a class="action-logout" href="javascript:;">Logout</a></li>
-{$}
+[[/br.authorized]]
     </ul>
     </div><!--/.navbar-collapse -->
   </div>
