--- a/css/bright-src-bootstrap2.css
+++ b/css/bright-src-bootstrap2.css
@@ -1,87 +1,3 @@
-/* jshint ignore:start *//* the norm */
-#gritter-notice-wrapper {
-	position:fixed;
-	top:20px;
-	right:20px;
-	width:301px;
-	z-index:9999;
-}
-#gritter-notice-wrapper.top-left {
-    left: 20px;
-    right: auto;
-}
-#gritter-notice-wrapper.bottom-right {
-  top: auto;
-  left: auto;
-  bottom: 20px;
-  right: 20px;
-}
-#gritter-notice-wrapper.bottom-left {
-  top: auto;
-  right: auto;
-  bottom: 20px;
-  left: 20px;
-}
-.gritter-item-wrapper {
-  /*opacity: 0.8;*/
-  background-color: #5bb2de;
-  color: white;
-  border-radius: 6px;
-  position:relative;
-  margin:0 0 10px 0;
-}
-.gritter-item-wrapper.gritter-red {
-  /*opacity: 0.8;*/
-  background-color: red !important;
-  border: 1px solid red;
-}
-.gritter-item-wrapper.gritter-light {
-  /*opacity: 0.8;*/
-  background-color: #5bb2de;
-  border: 1px solid #5bb2de;
-}
-.gritter-item {
-	display:block;
-	color:#eee;
-	padding:11px 11px 11px 11px;
-	font-size: 10pt;
-  /*word-break: break-all;*/
-}
-.gritter-item-wrapper.hover {
-  /*opacity: 1;*/
-}
-.gritter-item p {
-	padding:0;
-	margin:0;
-}
-.gritter-close {
-  display:none;
-  position:absolute;
-  top:5px;
-  right:10px;
-  cursor:pointer;
-}
-
-.gritter-title {
-	font-size:12pt;
-	font-weight:normal;
-	padding:0 0 7px 0;
-	display:block;
-	text-shadow:1px 1px 0 #000; /* Not supported by IE :( */
-}
-.gritter-image {
-	width:48px;
-	height:48px;
-	float:left;
-}
-.gritter-with-image,
-.gritter-without-image {
-	padding:0 0 5px 0;
-}
-.gritter-with-image {
-	width:220px;
-	float:right;
-}
 .template {
   display: none;
 }
@@ -108,7 +24,7 @@ textarea.justified {
 
 input.justified, div.justified {
   width: 100%;
-  /*height: 2em;*/
+  height: 2em;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -249,7 +165,7 @@ td.optimal-width, th.optimal-width {
 }
 
 .container-box {
-  margin-top: 30px;
+  margin-top: 45px;
 }
 
 .fluid-box {
@@ -259,7 +175,7 @@ td.optimal-width, th.optimal-width {
 /* bootstrap */
 @media (max-width: 979px) {
   .navbar-fixed-top {
-    /*position: static;*/
+    position: static;
     margin-bottom: 0px !important;
   }
   .navbar-fixed-top .navbar-inner {
@@ -287,11 +203,6 @@ td.optimal-width, th.optimal-width {
   margin-bottom: 9px !important;
 }
 
-.form-horizontal .control-label-two-rows {
-  padding-top: 4px !important;
-  line-height: 14px;
-}
-
 .nav .btn-toolbar {
   margin-top: 6px;
   margin-bottom: 4px;
@@ -303,10 +214,22 @@ td.optimal-width, th.optimal-width {
   padding-right: 5px;
 }
 
-/*.navbar .btn {
-  margin: 5px 0px 0px 0px;
+.navbar .btn {
+  margin: 5px 0px 5px 0px;
 }
-*/
+
+.navbar .input-append .btn {
+  margin: 0px 0px 0px 0px;
+}
+
+.navbar .btn-url {
+  margin: 5px 0px 5px 0px;
+}
+
+.navbar .input-append {
+  margin: 5px 0px 5px 0px;
+}
+
 .navbar-internal {
   margin-bottom: 5px;
 }
@@ -401,7 +324,7 @@ span.required {
   padding: 10px;
   padding-top: 6px;
   padding-bottom: 6px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
   -webkit-border-radius: 4px;
@@ -410,7 +333,6 @@ span.required {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  background-color: #EFEFEF;
 }
 
 .filter-panel:after {
@@ -420,9 +342,8 @@ span.required {
 }
 
 .filter-block {
-  height: 65px;
-  padding-left: 0px;
-  margin-right:6px;
+  height: 60px;
+  margin-right: 10px;
 }
 
 .filter-block label {
@@ -448,8 +369,8 @@ a i:hover, .brand:hover {
 }
 
 a.not-a {
-  text-decoration: none;
-  color: inherit;
+  text-decoration: none !important;
+  color: inherit !important;
 }
 a.btn-url {
   text-decoration: none;
@@ -463,13 +384,15 @@ a.btn-url {
   vertical-align: middle;
   cursor: pointer;
 }
-.navbar .btn-url {
-  margin: 5px 0px 5px 0px;
-}
-
 .label {
   font-weight: normal !important;
   padding:3px;
+  padding-left:5px;
+  padding-right:5px;
+}
+.badge {
+  font-weight: normal !important;
+  padding:1px;
   padding-left:5px;
   padding-right:5px;
 }
@@ -477,10 +400,12 @@ a.btn-url {
 table.table th {
   text-align: center;
   vertical-align: middle;
+  font-weight: 400;
+  line-height: 1.3em;
 }
 
 /* bootstrap3 */
-.form-control.select2-container {
+/*.form-control.select2-container {
   padding:0px;
   border:0px;
 }
@@ -494,7 +419,7 @@ table.table th {
   height:33px;
   padding-top: 3px;
 }
-
+*/
 .br-ajax-dropdown li {
   white-space:nowrap;
 }
@@ -538,14 +463,30 @@ a.pager-nav-element:hover,a.pager-size-element:hover {
   color:none;
 }
 
-/* submenu */
-.dropdown-submenu{position:relative;}
-.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
-.dropdown-submenu:hover>.dropdown-menu{display:block;}
-.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
-.dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
-.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
-
-.thumbnail {
-  background-color: initial;
+.br-editable {
+  border: 1px solid transparent;
+  /*padding: 2px;*/
 }
+
+.br-editable:hover {
+  border: 1px dashed orange;
+  /*padding: 2px;*/
+  cursor: text;
+}
+div.br-editable, span.br-editable {
+  padding: 2px;
+}
+
+.tooltip {
+  z-index: 1060;
+}
+
+.input-append {
+  white-space: normal;
+}
+
+/* compatible with bootstrap3 */
+.input-group-btn {
+  float:right;
+}
+
