--- a/css/bright.css
+++ b/css/bright.css
@@ -1,3 +1,87 @@
+/* jshint ignore:start *//* the norm */
+#gritter-notice-wrapper {
+	position:fixed;
+	top:20px;
+	right:20px;
+	width:301px;
+	z-index:9999;
+}
+#gritter-notice-wrapper.top-left {
+    left: 20px;
+    right: auto;
+}
+#gritter-notice-wrapper.bottom-right {
+  top: auto;
+  left: auto;
+  bottom: 20px;
+  right: 20px;
+}
+#gritter-notice-wrapper.bottom-left {
+  top: auto;
+  right: auto;
+  bottom: 20px;
+  left: 20px;
+}
+.gritter-item-wrapper {
+  /*opacity: 0.8;*/
+  background-color: #5bb2de;
+  color: white;
+  border-radius: 6px;
+  position:relative;
+  margin:0 0 10px 0;
+}
+.gritter-item-wrapper.gritter-red {
+  /*opacity: 0.8;*/
+  background-color: red !important;
+  border: 1px solid red;
+}
+.gritter-item-wrapper.gritter-light {
+  /*opacity: 0.8;*/
+  background-color: #5bb2de;
+  border: 1px solid #5bb2de;
+}
+.gritter-item {
+	display:block;
+	color:#eee;
+	padding:11px 11px 11px 11px;
+	font-size: 10pt;
+  /*word-break: break-all;*/
+}
+.gritter-item-wrapper.hover {
+  /*opacity: 1;*/
+}
+.gritter-item p {
+	padding:0;
+	margin:0;
+}
+.gritter-close {
+  display:none;
+  position:absolute;
+  top:5px;
+  right:10px;
+  cursor:pointer;
+}
+
+.gritter-title {
+	font-size:12pt;
+	font-weight:normal;
+	padding:0 0 7px 0;
+	display:block;
+	text-shadow:1px 1px 0 #000; /* Not supported by IE :( */
+}
+.gritter-image {
+	width:48px;
+	height:48px;
+	float:left;
+}
+.gritter-with-image,
+.gritter-without-image {
+	padding:0 0 5px 0;
+}
+.gritter-with-image {
+	width:220px;
+	float:right;
+}
 .template {
   display: none;
 }
