--- a/tools/template-web/backend/templates/login.html
+++ b/tools/template-web/backend/templates/login.html
@@ -14,7 +14,7 @@
           </div>
           <div class="modal-body">
             <div class="alert alert-danger login-error" style="display:none;"></div>
-            <form class="form-horizontal" role="form" action="javascript:;" onsubmit="return false;">
+            <form class="form-horizontal" role="form" action="javascript:" onsubmit="return false;">
               <div class="form-group">
                 <label class="col-lg-2 control-label">Login</label>
                 <div class="col-lg-10">
