--- a/tools/template-web/backend/templates/navigation.html
+++ b/tools/template-web/backend/templates/navigation.html
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="divider-vertical"></li>
       <li><a><strong>Logged as [[br.login.name]]</strong></a></li>
-      <li><a class="action-logout" href="javascript:;">Logout</a></li>
+      <li><a class="action-logout" href="javascript:">Logout</a></li>
 [[/br.authorized]]
     </ul>
     </div><!--/.navbar-collapse -->
