--- a/tools/template-web/backend/templates/users.html
+++ b/tools/template-web/backend/templates/users.html
@@ -94,7 +94,7 @@
           <h3 class="operation">Edit</h3>
         </div>
         <div class="modal-body">
-          <form class="form-horizontal" role="form" action="javascript:;" onsubmit="return false;">
+          <form class="form-horizontal" role="form" action="javascript:" onsubmit="return false;">
             <div class="form-group">
               <label class="col-lg-2 control-label"><span class="required">*</span>Name</label>
               <div class="col-lg-10">
@@ -122,8 +122,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <a href="javascript:;" class="btn btn-primary action-save">Save</a>
-          <a href="javascript:;" class="btn btn-default" data-dismiss="modal">Cancel</a>
+          <a href="javascript:" class="btn btn-primary action-save">Save</a>
+          <a href="javascript:" class="btn btn-default" data-dismiss="modal">Cancel</a>
         </div>
       </div>
     </div>
