--- a/tools/template-web/backend/templates/footer.html
+++ b/tools/template-web/backend/templates/footer.html
@@ -1,5 +1,5 @@
   <!--[if lt IE 8]>
-    <script src="[[br]]3rdparty/json2/json2.js"></script>
+  <script src="[[br]]3rdparty/json2/json2.min.js"></script>
   <![endif]-->
 
   <script src="[[br]]3rdparty/jquery/jquery-1.12.4.min.js"></script>
@@ -8,11 +8,6 @@
   <script src="[[br]]3rdparty/handlebars/js/4.0.11/handlebars.min.js"></script>
   <script src="[[br]]3rdparty/gritter/js/jquery.gritter.min.js"></script>
   <script src="[[br]]js/bright.min.js"></script>
-
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 
 {:/login.html}
   <script src="[[br]]js/br.user.js"></script>
