--- a/tools/template-web/backend/templates/head.html
+++ b/tools/template-web/backend/templates/head.html
@@ -7,9 +7,9 @@
   <meta name="author" content="[[br.config.page-author]]">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <link href="[[br]]3rdparty/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="[[br]]3rdparty/fontawesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
-  <link href="[[br]]3rdparty/jquery-ui/1.11.4/jquery-ui.theme.min.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/fontawesome/latest/css/font-awesome.min.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/jquery-ui/latest/css/jquery-ui.theme.min.css" rel="stylesheet">
   <link href="[[br]]css/bright-bootstrap3.css" rel="stylesheet">
   <link href="[[/]]css/styles.css" rel="stylesheet">
 </head>
