--- a/tools/template-web/templates/head.html
+++ b/tools/template-web/templates/head.html
@@ -10,6 +10,6 @@
   <title>[[br.config.page-title]]</title>
 
   <link href="[[br]]3rdparty/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="[[br]]css/bright-bootstrap3.css" rel="stylesheet">
+  <link href="[[br]]css/bright.bs3.css" rel="stylesheet">
   <link href="[[/]]css/styles.css" rel="stylesheet">
 </head>
