--- a/css/bright.css
+++ b/css/bright.css
@@ -171,6 +171,15 @@ td.optimal-width, th.optimal-width {
 .navbar .btn {
   margin: 5px 0px 5px 0px; }
 
+.navbar .input-append .btn {
+  margin: 0px 0px 0px 0px; }
+
+.navbar .btn-url {
+  margin: 5px 0px 5px 0px; }
+
+.navbar .input-append {
+  margin: 5px 0px 5px 0px; }
+
 .navbar-internal {
   margin-bottom: 5px; }
 
@@ -199,7 +208,7 @@ h1 {
   margin-bottom: 5px; }
 
 .modal-header h1 {
-  margin-top: 5px !important; }
+  margin-top: 5px; }
 
 h1 small {
   font-size: 14px; }
@@ -228,7 +237,7 @@ div.br-sort-index {
   margin-left: 4px;
   font-weight: normal; }
 
-.blured {
+.blured, .muted {
   color: #999; }
 
 .google-map img {
@@ -249,7 +258,7 @@ span.required {
   padding: 10px;
   padding-top: 6px;
   padding-bottom: 6px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
   -webkit-border-radius: 4px;
@@ -265,7 +274,7 @@ span.required {
   display: block; }
 
 .filter-block {
-  height: 65px;
+  height: 60px;
   margin-right: 10px; }
 
 .filter-block label {
@@ -286,8 +295,8 @@ a i:hover, .brand:hover {
   max-height: 600px; }
 
 a.not-a {
-  text-decoration: none;
-  color: inherit; }
+  text-decoration: none !important;
+  color: inherit !important; }
 
 a.btn-url {
   text-decoration: none;
@@ -301,32 +310,40 @@ a.btn-url {
   vertical-align: middle;
   cursor: pointer; }
 
-.navbar .btn-url {
-  margin: 5px 0px 5px 0px; }
-
 .label {
   font-weight: normal !important;
   padding: 3px;
   padding-left: 5px;
   padding-right: 5px; }
 
+.badge {
+  font-weight: normal !important;
+  padding: 1px;
+  padding-left: 5px;
+  padding-right: 5px; }
+
 table.table th {
   text-align: center;
-  vertical-align: middle; }
+  vertical-align: middle;
+  font-weight: 400;
+  line-height: 1.3em; }
 
 /* bootstrap3 */
-.form-control.select2-container {
-  padding: 0px;
-  border: 0px; }
+/*.form-control.select2-container {
+  padding:0px;
+  border:0px;
+}
 
 .form-control.select2-container .select2-choice {
-  height: 33px;
-  padding-top: 3px; }
+  height:33px;
+  padding-top: 3px;
+}
 
 .form-control.select2-container .select2-choice div {
-  height: 33px;
-  padding-top: 3px; }
-
+  height:33px;
+  padding-top: 3px;
+}
+*/
 .br-ajax-dropdown li {
   white-space: nowrap; }
 
@@ -382,3 +399,10 @@ div.br-editable, span.br-editable {
 
 .tooltip {
   z-index: 1060; }
+
+.input-append {
+  white-space: normal; }
+
+/* compatible with bootstrap3 */
+.input-group-btn {
+  float: right; }
