--- a/tools/template-web/backend/templates/head.html
+++ b/tools/template-web/backend/templates/head.html
@@ -10,6 +10,6 @@
   <link href="[[br]]3rdparty/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
   <link href="[[br]]3rdparty/fontawesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <link href="[[br]]3rdparty/jquery-ui/latest/css/jquery-ui.theme.min.css" rel="stylesheet">
-  <link href="[[br]]css/bright-bootstrap3.css" rel="stylesheet">
+  <link href="[[br]]css/bright.bs3.css" rel="stylesheet">
   <link href="[[/]]css/styles.css" rel="stylesheet">
 </head>
