--- a/tools/template-web/templates/footer.html
+++ b/tools/template-web/templates/footer.html
@@ -1,8 +1,6 @@
-  <!--[if lt IE 8]>
-  <script src="[[br]]3rdparty/json2/latest/js/json2.min.js"></script>
-  <![endif]-->
+  <script src="{br}dist/js/bright.min.js"></script>
 
-  <script src="[[br]]dist/js/bright.min.js"></script>
+  <!-- put your custom scripts here -->
 
 </body>
 </html>
