--- a/tools/template-web/templates/head.html
+++ b/tools/template-web/templates/head.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="[[br.config.page-description]]">
-  <meta name="author" content="[[br.config.page-author]]">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="[[config.meta/description]]">
+  <meta name="author" content="[[config.meta/author]]">
 
-  <title>[[br.config.page-title]]</title>
+  <title>[[config.meta/title]]</title>
 
-  <link href="[[br]]3rdparty/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="[[br]]css/bright.bs3.css" rel="stylesheet">
-  <link href="[[/]]css/styles.css" rel="stylesheet">
+  <link href="[[br]]3rdparty/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
+  <link href="[[br]]dist/css/bright.css" rel="stylesheet">
+
+  <!-- put your custom styles here -->
+
 </head>
