--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -1,42 +1,14 @@
-<style>
+[[#br.request.isRest]]
+DEBUG: [[&debug.message]]
+[[/br.request.isRest]]
 
-div.bright-debug-panel {
-  font-family: Helvetica,Arial,sans-serif;
-  font-weight: 300;
-  font-size: 10pt;
-  margin: 4px;
-  background-color: #DDD;
-  border: 1px solid #EFEFEF;
-  z-index: 1000;
-  color: black;
-}
-div.bright-debug-panel-wrapper {
-  padding: 4px;
-}
-div.bright-debug-panel div.bright-debug-section {
-  padding: 4px;
-}
-div.bright-debug-panel div.title {
-  font-size: 12pt;
-  margin-bottom: 4px;
-}
-div.bright-debug-panel div.info-box {
-  font-family: Courier;
-  padding: 10pt;
-  background-color: #FEFEFE;
-  border: 1px solid #AAA;
-  white-space: pre-wrap;
-  word-break: break-word;
-  line-height: 12pt;
-}
-
-</style>
-
+[[^br.request.isRest]]
 <div class="bright-debug-panel">
   <div class="bright-debug-panel-wrapper">
     <div class="bright-debug-section">
       <div class="title">Debug message:</div>
-      <div class="info-box"><?php print_r($message); ?></div>
+      <div class="info-box">[[debug.message]]</div>
     </div>
   </div>
 </div>
+[[/br.request.isRest]]
