--- a/sass/bright.bs4.scss
+++ b/sass/bright.bs4.scss
@@ -50,3 +50,8 @@ td.optimal-width, th.optimal-width {
   width:10px;
   white-space:nowrap;
 }
+span.required {
+  color: red;
+  margin-right: 5px;
+  font-weight: bold;
+}
