--- a/tools/project-templates/web/templates/head.html
+++ b/tools/project-templates/web/templates/head.html
@@ -10,7 +10,7 @@
   <title>[[config.meta/title]]</title>
 
   <link href="[[br]]3rdparty/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet">
-  <link href="[[br]]dist/css/bright.css" rel="stylesheet">
+  <link href="[[br]]dist/css/bright.latest.css" rel="stylesheet">
 
   <!-- put your custom styles here -->
 
