--- a/tools/project-templates/web/templates/backend/footer.html
+++ b/tools/project-templates/web/templates/backend/footer.html
@@ -1,4 +1,4 @@
-  <script src="{br}dist/js/bright.bs3.min.js?v=0.540909162764557"></script>
+  <script src="{br}dist/js/bright.latest.min.js?v=0.540909162764557"></script>
   <script src="{br}js/br.user.js"></script>
 
 {:/users.html}
