--- a/tools/project-templates/web/templates/backend/head.html
+++ b/tools/project-templates/web/templates/backend/head.html
@@ -10,7 +10,7 @@
   <title>[[config.meta/title]]</title>
 
   <link href="{br}3rdparty/fontawesome/latest/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="{br}dist/css/bright.bs3.css" rel="stylesheet" />
+  <link href="{br}dist/css/bright.latest.css" rel="stylesheet" />
 
   <link href="{/}css/backend/bootstrap-yeti.min.css" rel="stylesheet" />
   <link href="{/}css/backend/styles.css" rel="stylesheet">
