--- a/tools/project-templates/web/templates/footer.html
+++ b/tools/project-templates/web/templates/footer.html
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <script src="[[br]]dist/js/bright.min.js"></script>
+  <script src="[[br]]dist/js/bright.latest.min.js"></script>
 
   <!-- put your custom scripts here -->
 
