--- a/templates/ErrorMessage.html
+++ b/templates/ErrorMessage.html
@@ -1,16 +1,23 @@
 [[#br.request.isProduction]]
-<div class="modal">
+<div class="modal" style="display:block;">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title">Unexpected error</h3>
+        <h5 class="modal-title text-danger">Unexpected error</h5>
       </div>
-      <div class="modal-body">
-      Sorry, we encountered unexpected error. Report was sent to support team.
+      <div class="modal-body text-break">
+        <div>Sorry, we encountered unexpected error. Report was sent to support team automatically. Feel free to copy below information and submit your issue manually.</div>
+        <div class="text-monospace border border-light rounded-sm bg-light my-2 p-2" style="font-size:80%;">
+          <strong>[[error.type]]: </strong>[[error.message]]<br />
+          <strong>Timestamp: </strong>[[error.timestamp]]<br />
+          <strong>Session ID: </strong>[[login.guid]]<br />
+          <strong>Client IP: </strong>[[br.request.clientIP]]<br />
+          <strong>Url: </strong>[[br.request.url]]<br />
+          <strong>Referer: </strong>[[br.request.referer]]
         </div>
-        <div class="modal-footer" style="background-color:red;">
-          <a href="javascript:;" onclick="window.history.back();" class="btn btn-sm btn-default" data-dismiss="modal">Close</a>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="javascript:;" onclick="window.history.back();" class="btn btn-default btn-outline-secondary" data-dismiss="modal">Close</a>
       </div>
     </div>
   </div>
@@ -21,7 +28,7 @@
 <div class="bright-error-panel">
   <div class="bright-error-panel-wrapper">
     <div class="bright-error-section">
-      <div class="error">[[error.message]]</div>
+      <div class="error">[[error.type]]: [[error.message]]</div>
       <div>[[error.file]]</div>
     </div>
     [[#error.traceInfo]]
