--- a/tools/project-templates/web/templates/backend/head.html
+++ b/tools/project-templates/web/templates/backend/head.html
@@ -9,12 +9,10 @@
 
   <title>[[config.meta/title]]</title>
 
-  <link href="{br}3rdparty/fontawesome/latest/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="{br}dist/css/bright.latest.css" rel="stylesheet" />
+  <link href="[[br]]3rdparty/bootstrap/latest/css/bootstrap.min.css?v=159515d30511" rel="stylesheet">
+  <link href="[[br]]3rdparty/fontawesome/latest/css/all.min.css?v=585780038dc" rel="stylesheet" />
+  <link href="[[br]]dist/css/bright.latest.css?v=4638707b6a" rel="stylesheet">
 
-  <link href="{/}css/backend/bootstrap-yeti.min.css" rel="stylesheet" />
-  <link href="{/}css/backend/styles.css" rel="stylesheet">
+  <!-- <link href="{/}css/cms/styles.css?v=309a89e8" rel="stylesheet"> -->
 
   <!-- put your custom styles here -->
-
-</head>
