--- a/tools/project-templates/web/templates/backend/pager.html
+++ b/tools/project-templates/web/templates/backend/pager.html
@@ -1,17 +1,17 @@
-<div class="row pager-control" style="display:none;">
-  <div class="span12 col-md-12">
-    <div class="pull-right">
+<div class="row pager-control mb-2" style="display:none;">
+  <div class="col-md-12">
+    <div class="float-right">
       <small>
-        <span class="pager-page-size-navigation"></span>
-        records per page
+        <span class="pager-page-size-navigation"></span> records per page
       </small>
     </div>
-
     <div>
       <small>
         <span class="pager-stat"></span>
-        <span class="selection-stat label label-default" style="display:none;"></span>
-        <a class="action-clear-selection" style="display:none;">Clear selection</a>
+      </small>
+      <span class="selection-stat badge badge-secondary" style="display:none;"></span>
+      <a class="badge badge-primary action-clear-selection" href="javascript:;" style="display:none;">Clear selection</a>
+      <small>
         <span class="pager-nav-element">|</span>
         <span class="pager-nav-element">Goto</span>
         <a class="pager-action-prior pager-nav-element">prior</a>
