--- a/tools/project-templates/web/templates/backend/footer.html
+++ b/tools/project-templates/web/templates/backend/footer.html
@@ -1,20 +1,4 @@
-  <script src="{br}dist/js/bright.latest.min.js?v=0.540909162764557"></script>
-  <script src="{br}js/br.user.js"></script>
+{@app-scripts.html}
 
-{:/users.html}
-  <script src="{/}js/backend/users.js"></script>
-{:}
-
-{:/messages.html}
-  <script src="{/}js/backend/messages.js"></script>
-{:}
-
-{:/edit-user.html}
-  <script src="{/}js/backend/edit-user.js"></script>
-{:}
-
-{:/my-account.html}
-  <script src="{/}js/backend/edit-user.js"></script>
-{:}
-
-  <!-- put your custom scripts here -->
+</body>
+</html>
