--- a/tools/project-templates/web/templates/backend/login.html
+++ b/tools/project-templates/web/templates/backend/login.html
@@ -1,24 +1,25 @@
 {@head.html}
 
-<body>
+</head>
+<body class="d-flex flex-column h-100">
 
 {@navigation.html}
 
-<div class="container">
-  <div class="container-box">
+  <div class="container-fluid">
+
     <div class="modal" style="display:inline;position:relative;">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h3>Login</h3>
+            <h5 class="modal-title">Login</h5>
           </div>
           <div class="modal-body">
             <div class="alert alert-danger login-error" style="display:none;"></div>
             <form class="form-horizontal" role="form" action="javascript:;" onsubmit="return false;">
               <div class="form-group">
-                <label class="col-lg-2 control-label">Login</label>
+                <label class="col-lg-2 control-label">Username</label>
                 <div class="col-lg-10">
-                  <input type="text" class="focus form-control login-field" name="login" placeholder="login" data-click-on-enter=".action-login">
+                  <input type="text" class="focus form-control login-field" name="login" placeholder="username" data-click-on-enter=".action-login">
                 </div>
               </div>
               <div class="form-group">
@@ -40,12 +41,15 @@
           </div>
           <div class="modal-footer">
             <button data-loading-text="sending info..." class="action-login btn btn-primary">Login</button>&nbsp;
-            <a href="{/}" class="btn btn-default">Cancel</a>
+            <a href="{/}" class="btn btn-outline-secondary">Cancel</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
 
-{@footer.html}
+  </div>
+
+{@app-scripts.html}
+
+</body>
+</html>
