--- a/tools/project-templates/web/templates/backend/navigation.html
+++ b/tools/project-templates/web/templates/backend/navigation.html
@@ -1,41 +1,24 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+<header class="sticky-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid d-flex justify-content-between">
+      <a class="navbar-brand" href="[[/]]" target="_blank"><img src="[[/]]images/no-image.png" style="height:32px;"></a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="{/}" target="_blank"><span>[[config.meta/title]]</span></a>
+
+[[#login]]
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" data-section="users" href="[[/]]backend/users.html">Users</a></li>
+        </ul>
+        <ul class="navbar-nav mr-right">
+          <li class="nav-item"><a class="nav-link" data-section="my-account" href="[[/]]backend/my-account.html">My account</a></li>
+          <li class="nav-item"><a class="nav-link action-logout" href="javascript:;">Logout</a></li>
+        </ul>
+      </div>
+[[/login]]
     </div>
-    <div class="navbar-collapse collapse">
-    <ul class="nav navbar-nav">
-      <li class="nav-item ajax-in-progress invisible">
-        <img width="24" border="0" src="{br}images/progress-small.gif" style="padding-top:5px;" />
-      </li>
-[[#br.authorized]]
-      <li class="nav-item" rel="messages"><a href="{/}backend/messages.html">Messages</a></li>
-      <li class="nav-item" rel="users"><a href="{/}backend/users.html">Users</a></li>
-    </ul>
-    <ul id="navBarEditor" class="nav navbar-nav navbar-right" style="display:none;">
-      <li class="divider-vertical"></li>
-      <li>
-        <div class="btn-toolbar">
-          <a class="btn btn-sm btn-warning action-save action-toolbar-save">Save</a>
-[[^isMyAccount]]
-          <a class="btn btn-sm btn-default action-save action-toolbar-save action-close">Save &amp; Close</a>
-          <a class="btn btn-sm btn-default action-cancel action-toolbar-cancel">Cancel</a>
-[[/isMyAccount]]
-        </div>
-      </li>
-    </ul>
-    <ul id="navBarRight" class="nav navbar-nav navbar-right">
-      <li class="divider-vertical"></li>
-      <li class="nav-item"><a href="{/}backend/my-account.html">My account</a></li>
-      <li><a class="action-logout" href="javascript:;">Logout</a></li>
-[[/br.authorized]]
-    </ul>
-    </div>
-  </div>
-</div>
+  </nav>
+</header>
+
