--- a/css/bright.bs4.css
+++ b/css/bright.bs4.css
@@ -10,7 +10,7 @@
 .right-aligned {
   text-align: right !important; }
 
-textarea.justified {
+a.justified, select.justified, textarea.justified, audio.justified, input.justified, div.justified {
   width: 100%;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -20,32 +20,7 @@ textarea.justified {
   margin-bottom: 2px; }
 
 input.justified, div.justified {
-  width: 100%;
-  height: 2em;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  margin-top: 2px;
-  margin-bottom: 2px; }
-
-select.justified {
-  width: 100%;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  margin-top: 2px;
-  margin-bottom: 2px; }
-
-a.justified {
-  width: 100%;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  margin-top: 2px;
-  margin-bottom: 2px; }
+  height: 2em; }
 
 td.optimal-width, th.optimal-width {
   width: 10px;
