--- a/css/bright.bs2.css
+++ b/css/bright.bs2.css
@@ -337,6 +337,10 @@ a.pager-nav-element:hover, a.pager-size-element:hover {
 .input-append {
   white-space: normal; }
 
+/* compatible with bootstrap3 */
+.input-group-btn {
+  float: right; }
+
 .br-container-main {
   margin-top: 55px; }
 
