--- a/sass/bright.bs2.scss
+++ b/sass/bright.bs2.scss
@@ -237,6 +237,11 @@ a.pager-nav-element:hover,a.pager-size-element:hover {
   white-space: normal;
 }
 
+/* compatible with bootstrap3 */
+.input-group-btn {
+  float:right;
+}
+
 .br-container-main {
   margin-top: 55px;
 }
