--- a/css/bright.css
+++ b/css/bright.css
@@ -134,3 +134,30 @@ span.br-required {
 
 div.br-editable, span.br-editable {
   padding: 2px; }
+
+.br-filters-panel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end; }
+
+.br-filters-panel .br-filter-block {
+  padding-right: 10px;
+  padding-bottom: 10px; }
+
+.br-filters-panel .br-filter-block label {
+  color: black; }
+
+.br-filters-panel .br-filter-block .input-append {
+  margin-bottom: 0; }
+
+.br-filters-panel .br-filter-block-wide {
+  flex-grow: 1; }
+
+.br-filters-panel-edoctrina {
+  color: black;
+  background-color: #Fc3;
+  padding-left: 10px;
+  padding-top: 6px;
+  border-radius: 4px;
+  margin-bottom: 6px; }
