--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -7,7 +7,7 @@ DEBUG: [[&debug.message]]
   <div class="bright-debug-panel-wrapper">
     <div class="bright-debug-section">
       <div class="title">Debug message:</div>
-      <div class="info-box">[[debug.message]]</div>
+      <div class="info-box">[[&debug.message]]</div>
     </div>
   </div>
 </div>
